--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "dependencies": {
     "axios": "^1.7.9",
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   },
   "name": "discord-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/index.js",
     "dev": "npx ts-node index.ts"
   },
   "keywords": [],
@@ -16,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
